--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Recruit-O-Matic</title>
+  <title>recruit-O-matic</title>
   <link rel="stylesheet" type="text/css" href="recruit.css">
 </head>
 <body>
   <div class="body">
-    <h1>Recruit-o-matic</h1>
-    <div class="message">
-      <a href="mailto:">Send this email</a>
+    <h1>recruit-O-matic</h1>
+    <div class="message"></div>
+    <div class="btn-bar">
+      <button id="copy-btn" class="btn" name="copy">Copy to clipboard</button>
+      <button id="more-btn" class="btn" name="more">More</button>
     </div>
   </div>
+  <script type="text/javascript" src="chain.json"></script>
   <script type="text/javascript" src="recruit.js"></script>
 </body>
 </html>
