--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
       <button id="more-btn" class="btn" name="more">More</button>
     </div>
   </div>
-  <script type="text/javascript" src="chain.json"></script>
+  <script type="text/javascript" src="chain.json" charset="utf-8"></script>
   <script type="text/javascript" src="recruit.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-72573040-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
