--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>recruit-O-matic</title>
   <link rel="stylesheet" type="text/css" href="recruit.css">
+  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="initial-scale=1.0">
 </head>
 <body>
   <div class="body">
