fix character encoding issues in FF

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>recruit-O-matic</title>
   <link rel="stylesheet" type="text/css" href="recruit.css">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="viewport" content="initial-scale=1.0">
 </head>
