--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <button id="more-btn" class="btn" name="more">More</button>
     </div>
   </div>
+  <div id="credit">
+    <a href="https://twitter.com/mgadda" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mgadda</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  </div>
+
+
   <script type="text/javascript" src="chain.json" charset="utf-8"></script>
   <script type="text/javascript" src="recruit.js"></script>
   <script>
