--- a/index.html
+++ b/index.html
@@ -12,18 +12,26 @@
     <h1>recruit-O-matic</h1>
     <div class="message"></div>
     <div class="btn-bar">
-      <button id="copy-btn" class="btn" name="copy">Copy to clipboard</button>
+      <a target="_blank" class="btn" id="copy-btn" href="https://twitter.com/share?
+        url=https%3A%2F%2Fdev.twitter.com%2Fweb%2Ftweet-button&
+        via=twitterdev&
+        related=twitterapi%2Ctwitter&
+        hashtags=example%2Cdemo&
+        text=custom%20share%20text">
+          Tweet
+      </a>
+      <!-- <button id="copy-btn" class="btn" name="copy">Copy to clipboard</button> -->
       <button id="more-btn" class="btn" name="more">More</button>
+      <div id="share"></div>
     </div>
+    <a class="twitter-timeline" href="https://twitter.com/hashtag/recruit-o-matic" data-widget-id="692745601113464832">#recruit-o-matic Tweets</a>
   </div>
-  <div id="credit">
+  <!-- <div id="credit">
     <a href="https://twitter.com/mgadda" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mgadda</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </div>
+ -->
 
-
-  <script type="text/javascript" src="chain.json" charset="utf-8"></script>
-  <script type="text/javascript" src="recruit.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,5 +40,13 @@
 
     ga('create', 'UA-72573040-1', 'auto');
   </script>
+
+  <script type="text/javascript" src="chain.json" charset="utf-8"></script>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+  <script type="text/javascript" src="chain.js"></script>
+  <script type="text/javascript" src="prng.js"></script>
+  <script type="text/javascript" src="recruit.js" defer></script>
+
 </body>
 </html>
