replace copy button with tweet button

--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
     <h1>recruit-O-matic</h1>
     <div class="message"></div>
     <div class="btn-bar">
-      <a target="_blank" class="btn" id="copy-btn" href="https://twitter.com/share?
-        url=https%3A%2F%2Fdev.twitter.com%2Fweb%2Ftweet-button&
-        via=twitterdev&
-        related=twitterapi%2Ctwitter&
-        hashtags=example%2Cdemo&
-        text=custom%20share%20text">
-          Tweet
+      <!--<a target="_blank" class="btn" id="copy-btn" href="https://twitter.com/share?-->
+        <!--url=https%3A%2F%2Fdev.twitter.com%2Fweb%2Ftweet-button&-->
+        <!--via=twitterdev&-->
+        <!--related=twitterapi%2Ctwitter&-->
+        <!--hashtags=example%2Cdemo&-->
+        <!--text=custom%20share%20text">-->
+          <!--Tweet-->
+      <!--</a>-->
+      <a class="btn tweet-btn" href="https://twitter.com/intent/tweet">
+        <i></i>
+        Tweet
       </a>
-      <!-- <button id="copy-btn" class="btn" name="copy">Copy to clipboard</button> -->
       <button id="more-btn" class="btn" name="more">More</button>
-      <div id="share"></div>
     </div>
-    <a class="twitter-timeline" href="https://twitter.com/hashtag/recruit-o-matic" data-widget-id="692745601113464832">#recruit-o-matic Tweets</a>
+    <div class="timeline-container">
+      <a class="twitter-timeline" href="https://twitter.com/search?q=%23recruitomatic%20OR%20recruit-o-matic" data-widget-id="693502632795590656">Tweets about #recruitomatic OR recruit-o-matic</a>
+    </div>
   </div>
   <!-- <div id="credit">
     <a href="https://twitter.com/mgadda" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mgadda</a>
