--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
     <h1>recruit-O-matic</h1>
     <div class="message"></div>
     <div class="btn-bar">
-      <button id="copy-btn" class="btn" name="copy">Copy to clipboard</button>
+      <a class="btn tweet-btn" href="https://twitter.com/intent/tweet">
+        <i></i>
+        Tweet
+      </a>
       <button id="more-btn" class="btn" name="more">More</button>
     </div>
-  </div>
-  <div id="credit">
-    <a href="https://twitter.com/mgadda" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mgadda</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    <div class="timeline-container">
+      <a class="twitter-timeline" href="https://twitter.com/search?q=%23recruitomatic%20OR%20recruit-o-matic" data-widget-id="693502632795590656">Tweets about #recruitomatic OR recruit-o-matic</a>
+    </div>
   </div>
 
-
-  <script type="text/javascript" src="chain.json" charset="utf-8"></script>
-  <script type="text/javascript" src="recruit.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,5 +31,12 @@
 
     ga('create', 'UA-72573040-1', 'auto');
   </script>
+
+  <script type="text/javascript" src="chain.json" charset="utf-8"></script>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+  <script type="text/javascript" src="chain.js"></script>
+  <script type="text/javascript" src="prng.js"></script>
+  <script type="text/javascript" src="recruit.js" defer></script>
 </body>
 </html>
