add summary card metatags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="viewport" content="initial-scale=1.0">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@mgadda">
+  <meta name="twitter:creator" content="@mgadda">
+  <meta name="twitter:title" content="recruit-O-matic">
+  <meta name="twitter:description" content="Generate your recruit cold call emails with markov chains!">
+  <meta name="twitter:image" content="http://recruit-o-matic.com/industry-silo-ventilation-pipe.png">
+
 </head>
 <body>
   <div class="body">
