--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:site" content="@mgadda">
   <meta name="twitter:creator" content="@mgadda">
   <meta name="twitter:title" content="recruit-O-matic">
-  <meta name="twitter:description" content="Generate your recruit cold call emails with markov chains!">
+  <meta name="twitter:description" content="Generate your recruiter cold-call emails with markov chains!">
   <meta name="twitter:image" content="http://recruit-o-matic.com/industry-silo-ventilation-pipe.png">
 
 </head>
